# sn_dsp

./: COPYING  Cargo.toml  README.md
src/: buffer.rs  bus.rs  ctl.rs  delay.rs  envelope.rs  fbk.rs  feedback.rs  filter.rs  frame.rs  interp.rs  lib.rs  math.rs  node.rs  noise.rs  num.rs  osc.rs  oscillator.rs  prelude.rs  test.rs  util.rs
src/envelope/: geom.rs
src/frame/: arf.rs  array.rs  sdf.rs  simd.rs
src/math/: geom.rs
tests/: buf_alloc.rs  bus_send_sync.rs  ctl_reset.rs  fbk.rs  lib.rs  sdf.rs
