[package]
authors = ["⧉⧉⧉"]
description = "dsp for sn_"
edition = "2021"
homepage = "https://github.com/mira-merkell/sn_dsp"
license = "MIT"
name = "sn_dsp"
readme = "README.md"
repository = "https://github.com/mira-merkell/sn_dsp.git"
version = "0.1.0"

[features]
default = ["f64"]
f64 = []

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"


[profile.release-lto]
inherits = "release"
opt-level = 3
lto = "fat"
